examples/passing/2138/Lib.purs
module Lib (A(..), A) where

data A = B | C
